--- a/scss/reset.css
+++ b/scss/reset.css
@@ -2,7 +2,7 @@
 * @Author: 周海明
 * @Date:   2018-01-17 12:28:36
 * @Last Modified by:   周海明
-* @Last Modified time: 2018-01-17 20:09:00
+* @Last Modified time: 2018-01-18 18:26:40
 */
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, blockquote, th, td, p{margin:0; padding:0;}
 
@@ -13,7 +13,7 @@ a{
 	outline: 0;
 }
 body{
-	background-color: #f2f0f0;
+	background-color: #fff;
     color: #666;
     font-size: 12px;
     font-family: Arial,'Microsoft YaHei';
@@ -21,13 +21,12 @@ body{
 body,html{
 	height: 100%;
 	position: relative;
-	background: #f4f4f4;
 }
 img{vertical-align:top; display:block; border:none;}
 a,input{outline:none;}
 em,i,s{font-style:normal;display: inline-block;vertical-align: middle;}
 b,strong,h1,h2,h3,h4,h5,h6{font-weight:normal;}
-.clearfix::after{content:""; display:block; clear:both; height:0; visibility:hidden;}
+.clear::after{content:""; display:block; clear:both; height:0; visibility:hidden;}
 table{border-collapse:collapse;}
 
 .border0{border:none;}
