--- a/scss/scss.scss
+++ b/scss/scss.scss
@@ -2,24 +2,35 @@
 * @Author: 周海明
 * @Date:   2018-01-16 22:00:00
 * @Last Modified by:   周海明
-* @Last Modified time: 2018-01-17 23:21:43
+* @Last Modified time: 2018-01-19 08:37:21
 */
+// 引入初始化
 @import "reset";
+// 引入颜色
+@import "color";
+// 引入混合指令
+@import "mixin";
+
+
 // 顶部工具栏
-$cl:#f36;
-
-
 #M_PC_top_nav, #M_PC_top_nav_container {
     min-width: 1260px;
-    background-color: #F8F8F8;
+    background-color: $bg;
     height: 30px;
 }
-.hrad{
-	background-color: #fff;
+.con_star{
+	display: inline-block;
+	width:13px;
+	height:13px;
+    background: url(http://s2.mogucdn.com/mlcdn/c45406/170328_88giad0l4lcl61kg8ak02567ddhfd_32x30.png) center no-repeat;
+	background-size:100%;			    					
+}
+.hrader{
+	background-color: $bg2;
     #M_PC_top_nav{
 	    #M_PC_top_nav_container{
 	        font-size: 12px;
-		    color: #666;
+		    color: $szcl;
 		    line-height: 30px;	
 	      	em{
 	    	    display: inline-block;
@@ -48,7 +59,7 @@ $cl:#f36;
 						    height: 20px;
 						    line-height: 20px;
 						    cursor: pointer;
-						    color: #666;
+						    color: $szcl;
 						    text-decoration: none;
 							.hom{
 							    background-position: 0 0;
@@ -85,7 +96,7 @@ $cl:#f36;
 						    position: absolute;
 						    top: 30px;
 						    z-index: 999;
-						    background-color: #F8F8F8;
+						    background-color: $bg;
 						    padding: 8px 0;
 						    border: 1px solid #eee;
 						    line-height: 20px;
@@ -104,7 +115,7 @@ $cl:#f36;
     }
     #com_search{
 	    min-width: 1260px;
-    	background-color: #fff;
+    	background-color: $bg2;
     	.inne{
 		    height: 120px;
 		    position: relative;
@@ -134,7 +145,7 @@ $cl:#f36;
 					}
 					.active{
 					    background-color: $cl;
-							color: #fff;
+							color: $bg2;
 					}
 			    }
 				.search-box{
@@ -153,13 +164,13 @@ $cl:#f36;
 						float: left;
 					    width: 70px;
 					    height: 32px;
-					    background: #f36 url(http://d04.res.meilishuo.net/pic/_o/a4/d5/6570b3774433f4b0cf6b6eb8d01e_19_17.c5.png) no-repeat center;
+					    background: $cl url(http://d04.res.meilishuo.net/pic/_o/a4/d5/6570b3774433f4b0cf6b6eb8d01e_19_17.c5.png) no-repeat center;
 					    cursor: pointer;
 					}
 					.suggest-box{
 					    border: 1px solid #ddd;
 					    width: 447px;
-					    background-color: #fff;
+					    background-color: $bg2;
 					    position: absolute;
 					    left: 0;
 					    top: 31px;
@@ -173,7 +184,7 @@ $cl:#f36;
 					a{
 						padding-right: 10px;
 						font-size: 12px;
-						color: #666;
+						color: $szcl;
 					}
 					a:nth-of-type(2n){
 						color: $cl;
@@ -191,11 +202,10 @@ $cl:#f36;
     }
     #global-sec-nav{
 	    height: 40px;
-	    line-height: 40px;
-	    margin-bottom: 10px;
+	    line-height: 40px; 
 	    border-bottom: 1px solid #979797;
 	    border-bottom: 1px solid rgba(151,151,151,.32);
-	    background-color: #fff;
+	    background-color: $bg2;
 	    font-size: 0;
 	    clear: both;
 	    .totalnum-11{
@@ -222,3 +232,393 @@ $cl:#f36;
 	    }
     }
 }
+// banner图
+.banner_box{
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 500px;
+    .top_bnr{
+	    width: 100%;
+    	background-color: $bg3;
+    	.banner{
+		    width: 100%;
+    		z-index: 0;
+		    position: relative;
+		    height: 500px;
+	        width: 100%;
+			margin: 0 auto;
+			li{
+			    background: rgb(239, 239, 239);
+			    position: absolute;
+			    width: 1903px;
+			    left: 0px;
+			    top: 0px;
+			    // display: none;
+			    overflow: hidden;
+			    width: 100% !important;
+			    height: 500px;
+			    background-position: center !important;
+			    background-repeat: no-repeat !important;
+			    a{
+		    	    display: block;
+				    width: 100%;
+				    height: 100%;
+				    img{
+			    	    width: 1920px;
+					    height: 500px;
+					    margin: 0 auto;
+					    background-position: center !important;
+					    background-repeat: no-repeat !important;
+					    @include scale();
+				    } 
+			    }
+			}
+			.curren{ 
+	    	    img{
+	    	    	@include transform();
+		    	    @include scale(1,1);
+	    	    }
+		    }
+    	}
+    	.b_btn{
+		    zoom: 1;
+    		z-index: 4;
+    		a{
+			    display: none;
+			    opacity: .3;
+			    width: 40px;
+			    height: 100px;
+			    background: url(../images/slider-btn.png) no-repeat;
+			    position: absolute;
+			    top: 50%;
+			    margin-top: -50px;
+    		}
+    		.prev{
+			    left: 0;
+    			background-position: top left;
+    		}
+    		.next{
+		    	right: 0;
+    			background-position: top right;
+    		}
+    	}
+    	.b_dot{
+		    position: absolute;
+		    bottom: 12px;
+		    left: 43%;
+		    height: 12px;
+		    zoom: 1;
+		    z-index: 3; 
+		    li{
+	    	    overflow: hidden;
+			    float: left;
+			    width: 12px;
+			    height: 12px;
+			    line-height: 10px;
+			    color: #b5b2a8;
+			    background: #b5b2a8;
+			    margin: 0 5px;
+			    border-radius: 50%;
+			    cursor: pointer;
+			    text-indent: 100000000px;
+		    }
+		    .on{
+    	    	color: #5aaa16;
+    			background: #5aaa16;
+		    }
+    	}
+    }
+}
+// 主页内容
+
+.item{
+	float:left;
+	width:224px;
+	margin:0 20px 20px 0;
+	.pic_box{
+		display:block;
+		height:340px;
+	    background-image: url(http://s3.mogucdn.com/mlcdn/917393/171030_2kleblad0klc2d799l68f5b0dbib4_1600x2250.jpg_999x999.v1c0.webp);
+		background-size: cover;
+	}
+	.info{
+		.part{
+			margin-top:5px;
+			height:30px;
+			line-height:30px;
+			.price{
+				display: inline-block;
+				font-size:16px;
+				color:$cl;
+				margin-right:2px;
+			}
+			.collect{
+				float:right;
+				line-height:14px;
+				font-size:14px;
+				margin-top:6px;
+				margin-left:3px;
+				color:#999;
+				.icon_star{
+					margin-right:3px;
+				    display: inline-block;
+				    width: 13px;
+				    height: 13px;
+				    background: url(http://s2.mogucdn.com/mlcdn/c45406/170328_88giad0l4lcl61kg8ak02567ddhfd_32x30.png) center no-repeat;
+				    background-size: 100%; 
+				}
+			}
+		}
+		.title{
+		    font-size: 14px;
+			line-height: 28px;
+			display: block;
+		    font-size: 14px;
+		    white-space: nowrap;
+		    overflow: hidden;
+    		text-overflow: ellipsis;
+			.icon_select{
+
+			    display: inline-block;
+			    width: 38px;
+			    height: 20px;
+			    margin-right: 4px;
+			    background: url(http://s2.mogucdn.com/p2/170314/133753108_5996kakhb5c3kl74gjg24c2h24l48_90x42.png) no-repeat center;
+			    background-size: contain;
+			    vertical-align: sub;
+			}
+		}
+	}
+
+}
+.is-side{
+	margin-right: 0;
+}
+.top_warp{
+	clear: left;
+	#top_goods{
+		margin-top: 50px;
+		.link-more {
+		    float: right;  
+		    margin-top: 4px;
+		    font-size: 14px;
+		    color: #6f6f6f;
+		}
+		.title-addition {
+		    float: right;
+		    margin-top: 5px; 
+		    color: #6f6f6f;
+		}
+		.nav{
+		    text-align: center;
+		    .link{
+				position: relative;
+			    font-size: 20px;
+			    height: 28px;
+			    line-height: 28px;
+			    color: #000;
+			    border-bottom: 3px solid transparent;
+			    &:hover{
+			    	color: $cl1;
+			    	&:after{
+			    		visibility: visible;
+			    	}
+			    }
+		    }
+		    .link:first-child {
+			    margin-right: 33px;
+			}
+			.link:after {
+			    content: "";
+			    position: absolute;
+			    left: 50%;
+			    top: 32px;
+			    width: 36px;
+			    height: 3px;
+			    margin: auto;
+			    background-color: $cl1;
+			    visibility: hidden;
+			    @include translate3d();
+			}
+		    .active{
+	    	    color: $cl1;
+	    	    &:after{
+	    	    	visibility: visible;
+	    	    }
+		    } 
+		}  
+		.content_wrap{
+		    position: relative; 
+		    margin-top: 26px;
+		    font-size: 0;
+		    overflow: hidden;
+		    height:846px;
+		    .content{
+	    	    position: absolute;
+			    left: 0;
+			    top: 0;
+			    .title{
+    			    display: block;
+				    font-size: 14px;
+				    white-space: nowrap;
+				    overflow: hidden;
+				    text-overflow: ellipsis;
+	    		}
+		    }
+		} 
+	}
+	#beauty{
+		.title_wrap{
+		    margin: 40px auto 20px;
+		    .title_addition{
+	    	    float: right;
+			    margin-top: 5px;
+			    color: #6f6f6f;
+		    }
+		    .title{
+	    	    font-size: 20px;
+    			line-height: 28px;
+		    }
+		}
+		.waterfall-container{
+		    position: relative;
+
+		}
+		.pullup{
+    	    text-align: center;
+		    height: 40px;
+		    line-height: 40px;
+		    font-size: 14px;
+		    color: #888;
+		    position: relative;
+		    margin-left: auto;
+		    margin-right: auto;
+	    }
+	    .pullup::after{
+    	    content: "加载中...";
+	    }
+	}
+}
+.footer{
+	.footer_container{
+	    min-width: 1200px;
+	    margin-top: 15px;
+	    padding-top: 30px;
+	    background-color: #f5f5f5;
+	    border-top: 1px solid #ddd;
+	    font-size: 12px;
+	    color: $szcl;
+	    a{
+    	    color: $szcl;
+    		text-decoration: none;
+	    }
+	    h4{
+    	    font-size: 16px;
+			line-height: 28px;
+	    }
+	    .flist{
+    	    float: left;
+		    margin-right: 104px;
+		    margin-bottom: 20px;
+		    line-height: 26px;
+		    .footer_link{
+	    	    margin-top: 12px;
+		    }
+	    }
+	    .aboutus{
+	    	margin-right: 0;
+	    	.footer_icon_sina,
+	    	.footer_icon_tencent,
+	    	.footer_icon_qzone{
+	    		height: 18px;
+			    width: 18px;
+			    margin-top: 5px;
+			    margin-right: 5px;
+			    float: left;
+			    background: url(https://s10.mogucdn.com/p1/170310/idid_ie4tgobyge2gczjymuzdambqgqyde_74x18.png) no-repeat;
+	    	}
+	    	.footer_icon_qzone{
+    		    background-position: -28px 0;
+	    	}
+	    	.footer_icon_tencent{
+	    		background-position: -56px 0;
+	    	}
+	    }
+	    .service{
+    	    text-align: center;
+		    margin-left: 228px;
+		    margin-right: 55px;
+		    img{
+		    	display: inline-block;
+    			margin-top: 13px;
+		    }
+	    }
+	    .last{
+			margin-right: 0;
+	    	text-align: center;
+	    	img{
+	    		display: inline-block;
+    			margin-top: 13px;
+	    	}
+	    }
+	    .footer_record{
+    	    border-top: 1px solid #e6e6e6;
+		    line-height: 22px;
+		    padding: 12px 192px;
+		    text-align: center;
+		    a{
+	    	    color: #666;
+    			text-decoration: none;
+		    }
+	    }
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.global-act-left{
+	.act_left_box{
+	    width: 264px;
+	    height: 222px;
+	    position: fixed;
+	    left: 20px;
+	    top: 670px;
+	    z-index: 999;
+	    .left_ad_close{
+    	    width: 24px;
+		    height: 24px;
+		    position: absolute;
+		    right: 0;
+		    top: 0;
+	    }
+	    .act_fix_leftBanner{
+    	    width: 240px;
+		    height: 198px;
+		    position: absolute;
+		    left: 0;
+		    top: 24px;
+		  
+	    }
+	}
+}
+
+
+
