--- a/scss/mixin.scss
+++ b/scss/mixin.scss
@@ -2,7 +2,7 @@
 * @Author: 周海明
 * @Date:   2018-01-18 10:29:10
 * @Last Modified by:   周海明
-* @Last Modified time: 2018-01-18 17:28:54
+* @Last Modified time: 2018-01-19 15:41:10
 */
 @mixin scale($scaleX:1.1,$scaleY:1.1){
     -webkit-transform: scaleX($scaleX) scaleY($scaleY);
@@ -25,4 +25,27 @@
 	-o-transform: translate3d($a,$b,$c);
 	transform: translate3d($a,$b,$c);
 }
-
+@mixin rotate($deg:90deg){
+    transform: rotate($deg);
+    -webkit-transform: rotate($deg);
+    -ms-transform: rotate($deg);
+    -o-transform: rotate($deg);
+    -moz-transform: rotate($deg);
+}
+@mixin radius($px:100px){
+    border-radius: $px;
+    -moz-border-radius: $px;
+    -webkit-border-radius: $px;
+}
+@mixin shadow($a:inset,$b:0,$c:5px,$d:10px,$l:-5px,$e: #191919,$f:0,$g:1px,$h:0,$i:0,$j:#444){ 
+    box-shadow: $a $b $c $d $l $e, $f $g $h $i $j;
+    -moz-box-shadow: $a $b $c $d $l $e, $f $g $h $i $j;
+    -webkit-box-shadow: $a $b $c $d $l $e, $f $g $h $i $j;
+}
+@mixin opacity($opacity:.9){ 
+    -webkit-opacity: $opacity;
+    -moz-opacity: $opacity;
+    -khtml-opacity: $opacity;
+    opacity: $opacity;  
+}
+      
